--- a/imports/client/styles/components/_sim.scss
+++ b/imports/client/styles/components/_sim.scss
@@ -1,6 +1,6 @@
 .sim-floating {
 
-  position: absolute;
+  position: relative;
   z-index:1;
   left:300px;
   top:100px;
